--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -7,11 +7,10 @@
   </tr>
   <% @products.each do |product| %>
       <tr>
-        <td><%= product.title %></td>
+        <td><%= link_to(product.title, product_path(product)) %></td>
         <td><%= product.price %></td>
         <td><%= product.category.try(:title) %></td>
         <td><%= product.published %></td>
       </tr>
   <% end %>
 </table>
-
