--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -11,6 +11,7 @@
         <td><%= product.price %></td>
         <td><%= product.category.try(:title) %></td>
         <td><%= product.published %></td>
+        <td><%= link_to('Edit', edit_product_path(product)) %></td>
       </tr>
   <% end %>
 </table>
