--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -12,6 +12,7 @@
         <td><%= product.category.try(:title) %></td>
         <td><%= product.published %></td>
         <td><%= link_to('Edit', edit_product_path(product)) %></td>
+        <td><%= link_to('Delete', product_path(product), method: :delete, data: { confirm: 'Are you sure to delete this product?'}) %></td>
       </tr>
   <% end %>
 </table>
