--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -5,15 +5,6 @@
     <th>Category</th>
     <th>Published</th>
   </tr>
-  <% @products.each do |product| %>
-      <tr>
-        <td><%= link_to(product.title, product_path(product)) %></td>
-        <td><%= product.price %></td>
-        <td><%= product.category.try(:title) %></td>
-        <td><%= product.published %></td>
-        <td><%= link_to('Edit', edit_product_path(product)) %></td>
-        <td><%= link_to('Delete', product_path(product), method: :delete, data: { confirm: 'Are you sure to delete this product?'}) %></td>
-      </tr>
-  <% end %>
+  <%= render partial: 'product', collection: @products %>
 </table>
 <%= link_to('Add New Product', new_product_path) %>
